--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -62,6 +62,17 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
     margin-bottom: 1em !important;
 }
 
+#search-message.ng-enter {
+    opacity: 0;
+    margin-left: -200px;
+    transition: 1ms opacity, 200ms margin-left;
+}
+
+#search-message.ng-enter-active {
+    opacity: 1;
+    margin-left: 0;
+}
+
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
