--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,7 +5,6 @@
 
 $navbar-inverse-link-color: #5AADBB;
 $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
-
 /**
  *  Do not remove the comments below. It's the markers used by wiredep to inject
  *  sass dependencies when defined in the bower.json of your dependencies
@@ -64,26 +63,22 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 
 [ng-repeat].ng-enter {
     /* standard transition code */
+    
     -webkit-transition: 1s linear all;
     transition: 1s linear all;
     transform: translate3d(-150px, 0, 0);
+    opacity: 0;
 }
 
-
-/*get back to it some other time*/
-
 //[ng-repeat].ng-enter-stagger {
-//    -webkit-transition-delay: 3ms;
-//    transition-delay: 0.2s;
-//    transition-duration: 0.2s;
+//    -webkit-transition-delay: 200ms;
+//    transition-delay: 200ms;
+//    transition-duration: 0s;
 //}
 [ng-repeat].ng-enter.ng-enter-active {
     transform: translate3d(0, 0, 0);
-    
+    opacity: 1;
 }
-
-
-
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
