--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -66,6 +66,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
     
     -webkit-transition: 1s linear all;
     transition: 1s linear all;
+    -webkit-transform: translate3d(-150px, 0, 0);
     transform: translate3d(-150px, 0, 0);
     opacity: 0;
 }
@@ -76,12 +77,15 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 //    transition-duration: 0s;
 //}
 [ng-repeat].ng-enter.ng-enter-active {
+    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     opacity: 1;
 }
 
-[ng\:cloak], [ng-cloak], .ng-cloak {
-  display: none !important;
+[ng\:cloak],
+[ng-cloak],
+.ng-cloak {
+    display: none !important;
 }
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
